# PACMAN

./: Makefile.win  PACMAN.dev  README.md  main.c
Temp/: CMakeLists.txt  Makefile  Temp.cbp  cmake_install.cmake
Temp/src/: game.c  game.h  physics.c  physics.h
phase0 files/: PACMAN.layout  main.c
phase1 files/DOC/phase1-v3/phase1-v3/demo/: linux_x64
phase1 files/DOC/phase1-v3/phase1-v3/src/: game.c
phase1 files/PACMAN(phase1)/: CMakeLists.txt
phase1 files/PACMAN(phase1)/src/: game.c  game.h  input.h  physics.c
phase2 files/: phase2.rar
phase2 files/PACMAN(phase2)/: CMakeLists.txt
phase2 files/PACMAN(phase2)/src/: game.c  game.h  physics.c  physics.h
phase3 files/PACMAN(phase3)/: CMakeLists.txt
phase3 files/PACMAN(phase3)/src/: game.c  game.h  main.c  physics.c  physics.h
